--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,14 +7,17 @@
     <meta name="description" content="Advanced petrol station management system for inventory, sales, and employee management" />
     <meta name="author" content="PetroPulse" />
 
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
     <meta property="og:title" content="PetroPulse - Petrol Station Management System" />
     <meta property="og:description" content="Advanced petrol station management system for inventory, sales, and employee management" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@petropulse" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
